# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: moved argument
  check to the beginning of the doebuild() function to prevent "ebuild
  foo.ebuild fart" from causing the md5sums to be checked before recognizing
  that "fart" is not a valid command.  Closes bug #1823.
  
  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: 'USE="-foo"
  emerge bar' should now work correctly and consistently.  Fixes to the config
  class.  Closes bug #1455.
  
  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: applied
  jnelson's patch to properly kill all children when interrupted with ^C
  
  15 Apr 2002; Donny Davies <woodchip@gentoo.org>: make.conf: added a
  RESUMECOMMAND for lukemftp.
  
  15 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: portage.py: fixed up some
  "zing" logic inside the merge code (fixing variable being used before
  assignment errors)
  
  15 Apr 2002; Jon Nelson <jnelson@gentoo.org>: src/sandbox/Makefile,
  src/sandbox/problems/Makefile, src/sandbox/problems/sandbox_dev_fd_foo.c,
  src/sandbox/sandbox.c: Cleaned up Makefiles somewhat to take advantage of GNU
  Make, added '/dev/zero' and /dev/fd/' (<- note trailing slash) to the list of
  items accessible safely from the sandbox.  Added sandbox_dev_fd_foo.c to test
  for /dev/fd/<xx>.  The test is almost verbatim from the autoconf test suite.

  13 Apr 2002; Martin Schlemmer <azarah@gentoo.org>: ebuild.sh:
  Export $S and $D in dyn_compile and dyn_install, as our patched
  version of libtool uses these to fixup .la files.

*portage-1.8.19 (09 Apr 2002)

  08 Apr 2002; Geert Bevin <gbevin@gentoo.org>: emerge: Removed --all switch to
  emerge unmerge and clea.  Added emerge prune which is the same as old emerge
  unmerge.  Emerge unmerge removes all instances again without any proctedtion,